Fix new message autocomplete menu z-index

--- a/Extension/themes/_cyslantia-base.sass
+++ b/Extension/themes/_cyslantia-base.sass
@@ -1050,6 +1050,9 @@ td > a > img[vspace="5"]
 
 // My Messages
 
+body > .ui-autocomplete
+  z-index: auto !important
+
 .message-header
   background-color: lighten($color-background-main, 3%) !important
   border: none !important
